--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "fontfaceobserver": "^2.1.0",
     "history": "^4.10.1",
     "html5-device-mockups": "^3.2.1",
+    "js-email-validator": "^1.1.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-device-mockups": "^0.1.3",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-loader-spinner": "^3.1.14",
+    "react-mailchimp-subscribe": "^2.1.0",
     "react-router-dom": "^5.1.2",
     "react-router-transition": "^2.0.0",
     "react-scripts": "3.4.1",
