Added link for pdf

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "history": "^4.10.1",
     "html5-device-mockups": "^3.2.1",
     "js-email-validator": "^1.1.2",
+    "lodash.flatten": "^4.4.0",
+    "lodash.flattendeep": "^4.4.0",
+    "query-string": "^4.3.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-device-mockups": "^0.1.3",
